# mcp-agent-mongodb

./: .gitignore  AGENTS.md  EDD.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
demo/: agent_demo.py  memory_demo.py
src/mcp_agent_mongodb/: __init__.py  memory.py
tests/: conftest.py  test_acceptance.py
