[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-agent-mongodb"
version = "0.1.0"
description = "MongoDB Atlas-backed persistent agent memory for mcp-agent (LastMile AI): a drop-in Memory backend with Atlas Vector Search recall."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "MongoDB Developer Relations" }]
keywords = ["mcp-agent", "mcp", "mongodb", "atlas", "agent", "memory", "vector-search", "semantic", "persistence"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

dependencies = [
    "pymongo>=4.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "mongomock>=4.1",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
]
demo = [
    "mcp-agent>=0.1",
    "voyageai>=0.3",
]

[project.urls]
Homepage = "https://github.com/mongodb-developer/mcp-agent-mongodb"
Repository = "https://github.com/mongodb-developer/mcp-agent-mongodb"
Upstream = "https://github.com/lastmile-ai/mcp-agent"

# Constrain the build to this directory's `src/` so editable installs don't walk
# parent directories (which fails outside this package's tree).
[tool.hatch.build.targets.wheel]
packages = ["src/mcp_agent_mongodb"]

[tool.hatch.build.targets.sdist]
only-include = ["src", "tests", "demo", "README.md", "LICENSE", "pyproject.toml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
